test/files/errors/invalidExit.jg
_main int ()
{
    "hello" exit;
    0 return;
}